# silkgen

./: Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml
src/: analyze.rs  err.rs  generate.rs  main.rs  opt.rs  sizes.rs
src/tests/: mod.rs
src/tests/snapshots/: silkgen__tests__annoying_dog-invert.snap  silkgen__tests__annoying_dog.snap  silkgen__tests__basic-invert.snap  silkgen__tests__basic.snap  silkgen__tests__clearance-invert.snap  silkgen__tests__clearance.snap
