[package]
name = "silkgen"
version = "0.3.1"
description = "Generate KiCad silkscreen art from PNGs."
edition = "2021"

[dependencies]
clap = { version = "4", features = ["derive"] }
derive_more = "0.99"
env_logger = { version = "0.10", default-features = false, features = ["humantime"] }
fixed = { version = "1", features = ["std"] }
fixed-macro = "1"
image = { version = "0.24", default-features = false, features = ["png"] }
insta = "1"
log = "0.4"
rand = "0.8"
rand_chacha = "0.3"
sha2 = "0.10"
thiserror = "1"
uuid = { version = "1", features = ["v4"] }

[profile.release]
panic = "abort"
lto = true
codegen-units = 1
